# pushinator-rust

./: Cargo.toml  README.md
.github/workflows/: publish.yaml  test.yaml
src/: lib.rs
tests/: send_notification_test.rs
