[package]
name = "pushinator"
version = "0.1.0"
edition = "2021"
description = "A short description of my package"
homepage = "https://pushinator.com"
repository = "https://github.com/appricos/pushinator-rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"

[dev-dependencies]
mockito = "0.31"
tokio = { version = "1", features = ["full"] }


